refactor header logout

--- a/src/app/components/layout/header.component.html
+++ b/src/app/components/layout/header.component.html
@@ -11,7 +11,7 @@
             <li><a href="#services" class="menu-btn">Portfolio</a></li>
             <li><a href="#contact" class="menu-btn">Contact</a></li>
             <li><a class="menu-btn " (click)="login()" *ngIf="!isLogged">Login</a></li>
-            <li><a class="menu-btn " (click)="logout()" *ngIf="isLogged">Cerrar Cesion</a></li>
+            <li><a class="menu-btn " (click)="logout()" *ngIf="isLogged">Logout</a></li>
         </ul>
         <div class="menu-btn">
             <i class="fas fa-bars"></i>
