--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="signup">Don't have account?
-            <a href="#">Signup Now</a>
+            <a href="#" (click)="createdAccount()">Signup Now</a>
         </div>
     </div>
 </div>
