better login and register

--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -16,21 +16,21 @@
                         <i class="fa fa-user"></i>
                         <div class="info">
                             <div class="head">Name</div>
-                            <div class="sub-title">Sarfaraz Khan</div>
+                            <div class="sub-title">Carlos Ignacio Madrigal</div>
                         </div>
                     </div>
                     <div class="row">
                         <i class="fa fa-map-marker-alt"></i>
                         <div class="info">
                             <div class="head">Address</div>
-                            <div class="sub-title">Mumbai, Maharashtra</div>
+                            <div class="sub-title">Jujuy, Argentina</div>
                         </div>
                     </div>
                     <div class="row">
                         <i class="fa fa-envelope"></i>
                         <div class="info">
                             <div class="head">Email</div>
-                            <div class="sub-title">googoldkhan@gmail.com</div>
+                            <div class="sub-title">ignafree97@gmail.com</div>
                         </div>
                     </div>
                 </div>
