--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,158 +1,149 @@
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
-  user-select: none;
 }
-.bg-img {
-  background: url("https://images.pexels.com/photos/34088/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+body {
+  background: url("https://images.unsplash.com/photo-1548174753-897b449b097e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
   height: 100vh;
   background-size: cover;
-  background-position: center;
+  color: #fff;
+  font-family: Helvetica;
 }
-.bg-img:after {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  height: 100%;
+
+h2 {
+  font-size: 2rem;
+  font-weight: normal;
+}
+.based {
+  margin: 1rem;
+}
+.based a {
+  color: #fff;
+  font-weight: bold;
+}
+.form {
+  max-width: 860px;
+  margin: 6rem auto 0 auto;
+  display: flex;
+  flex-direction: row;
+  padding: 4rem;
+  background: rgba(0, 0, 0, .6);
+  border-radius: 0.2rem;
+  position: relative;
+}
+.form_content {
+  margin-bottom: 1rem;
+}
+.form-group {
+  color: #333;
+  opacity: 0;
+}
+.form-group_title {
+  color: #DC143C;
+  text-transform: uppercase;
+}
+.form-group_input {
   width: 100%;
-  background: rgba(0, 0, 0, 0.7);
+  border-width: 0 0 2px 0;
+  border-bottom: 2px solid #ccc;
+  padding: 0.5rem;
+  margin-bottom: 1.5rem;
 }
-.content {
+.form_background {
+  border-radius: 0.2rem;
+  background-color: #fff;
+  padding: 3rem 2rem;
+  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, .4);
+  width: 50%;
+  height: 120%;
+  margin: 0;
   position: absolute;
   top: 50%;
-  left: 50%;
-  z-index: 999;
-  text-align: center;
-  padding: 60px 32px;
-  width: 370px;
-  transform: translate(-50%, -50%);
-  background: rgba(255, 255, 255, 0.04);
-  box-shadow: -1px 4px 28px 0px rgba(0, 0, 0, 0.75);
+  left: 0;
+  right: 0;
+  transition: all 0.3s cubic-bezier(0.04, 0.57, 0.15, 1.46);
 }
-.content header {
-  color: white;
-  font-size: 33px;
-  font-weight: 600;
-  margin: 0 0 35px 0;
-  font-family: "Montserrat", sans-serif;
+.fieldset {
+  flex: 1;
+  margin: 0;
+  border: 0;
+  padding: 0 5rem 0 0;
 }
-.field {
-  position: relative;
-  height: 45px;
-  width: 100%;
-  display: flex;
-  background: rgba(255, 255, 255, 0.94);
+.fieldset:first-child {
+  padding-left: 0;
 }
-.field span {
-  color: #222;
-  width: 40px;
-  line-height: 45px;
+.fieldset:last-child {
+  padding-left: 5rem;
+  padding-right: 0;
 }
-.field input {
-  height: 100%;
-  width: 100%;
-  background: transparent;
-  border: none;
-  outline: none;
-  color: #222;
-  font-size: 16px;
-  font-family: "Poppins", sans-serif;
+.radio--invisible {
+  opacity: 0;
+  height: 0;
+  width: 0;
 }
-.space {
-  margin-top: 16px;
+.button {
+  text-transform: uppercase;
+  padding: 0.6rem 3rem;
+  border: 1px solid #fff;
+  background-color: #DC143C;
+  border-radius: 0.3rem;
+  cursor: pointer;
+  transition: background 0.2s ease-in;
+  display: inline-block;
+  margin-top: 1rem;
+  font-family: Helvetica;
 }
-.show {
-  position: absolute;
-  right: 13px;
-  font-size: 13px;
-  font-weight: 700;
-  color: #222;
+.button:hover {
+  background-color: rgba(0, 0, 0, .3);
+}
+.button--form {
+  background: #DC143C;
+  color: #fff;
+  float: right;
+  margin-top: 0;
+}
+.button--form:hover {
+  background: #ec9f88;
+}
+
+.btn
+{
+
+  background-color: #DC143C;
+  font-family: Helvetica;
+}
+
+#noaccount:checked ~ .form_background {
+  transform: translate(3rem, -50%);
+}
+#noaccount:checked ~ .form_background .form-group--account {
   display: none;
-  cursor: pointer;
-  font-family: "Montserrat", sans-serif;
 }
-.pass-key:valid ~ .show {
+#noaccount:checked ~ .form_background .form-group--noaccount {
   display: block;
+  opacity: 0;
+  animation-delay: 0.2s;
+  animation-duration: 0.3s;
+  animation-name: slidein;
+  animation-fill-mode: forwards;
 }
-.pass {
-  text-align: left;
-  margin: 10px 0;
+#account:checked ~ .form_background {
+  transform: translate(calc(100% - 3rem), -50%);
 }
-.pass a {
-  color: white;
-  text-decoration: none;
-  font-family: "Poppins", sans-serif;
+#account:checked ~ .form_background .form-group--noaccount {
+  display: none;
 }
-.pass:hover a {
-  text-decoration: underline;
+#account:checked ~ .form_background .form-group--account {
+  display: block;
+  animation-delay: 0.2s;
+  animation-duration: 0.3s;
+  animation-name: slidein;
+  animation-fill-mode: forwards;
 }
-.field input[type="submit"] {
-  background: #3498db;
-  border: 1px solid #2691d9;
-  color: white;
-  font-size: 18px;
-  letter-spacing: 1px;
-  font-weight: 600;
-  cursor: pointer;
-  font-family: "Montserrat", sans-serif;
-}
-.field input[type="submit"]:hover {
-  background: #2691d9;
-}
-.login {
-  color: white;
-  margin: 20px 0;
-  font-family: "Poppins", sans-serif;
-}
-.links {
-  display: flex;
-  cursor: pointer;
-  color: white;
-  margin: 0 0 20px 0;
-}
-.facebook,
-.instagram {
-  width: 100%;
-  height: 45px;
-  line-height: 45px;
-  margin-left: 10px;
-}
-.facebook {
-  margin-left: 0;
-  background: #4267b2;
-  border: 1px solid #3e61a8;
-}
-.instagram {
-  background: #e1306c;
-  border: 1px solid #df2060;
-}
-.facebook:hover {
-  background: #3e61a8;
-}
-.instagram:hover {
-  background: #df2060;
-}
-.links i {
-  font-size: 17px;
-}
-i span {
-  margin-left: 8px;
-  font-weight: 500;
-  letter-spacing: 1px;
-  font-size: 16px;
-  font-family: "Poppins", sans-serif;
-}
-.signup {
-  font-size: 15px;
-  color: white;
-  font-family: "Poppins", sans-serif;
-}
-.signup a {
-  color: #3498db;
-  text-decoration: none;
-}
-.signup a:hover {
-  text-decoration: underline;
+@keyframes slidein {
+  from {
+    opacity: 0;
+ }
+  to {
+    opacity: 1;
+ }
 }
